Fixed stacking issue with z-index set to -1 for all sections

--- a/styles.css
+++ b/styles.css
@@ -51,5 +51,16 @@ body {
 }
 
 section {
-  min-height: 100%;
+  width: 80%;
+  margin: auto;
+  position: absolute;
+  top: 50px;
+  z-index: -1;
+}
+
+a#resume {
+  font-size: 28px;
+  text-decoration: none;
+  border-radius: 3px;
+  background: #be552e;
 }
